[package]
name = "ur-wasm-js"
version = "0.1.0"
authors = ["Lightning Digital Entertainment <egge@getcurrent.io>"]
description = "Rust based WASM/JS bindings for ur-rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/lightning-digital-entertainment/ur-wasm-js"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ur = "0.4.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.68", features = ["console"] }

[profile.release]
lto = true
opt-level = 's'
